added borders to search

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 							<ul class="nav navbar-nav">
 								<form role="search" class="navbar-form-custom" action="search_results.html">
 									<div class="form-group">
-										<input type="text" placeholder="&#xF002; Otsi midagi..." class="form-control" name="top-search" id="top-search" style="font-family:Arial, FontAwesome; padding: 0px 30px">
+										<input type="text" placeholder="&#xF002; Otsi midagi..." class="form-control" name="top-search" id="top-search">
 									</div>
 								</form>
 								<li class="dropdown">
@@ -292,7 +292,7 @@
 												</tr>
 											</tbody>
 											<tfoot>
-												<tr><td></td><td><button type="button" class="label label-white pull-right m-t" data-container="body" data-toggle="popover" data-placement="top" data-content="<span class='m-r'><span class='label label-info'>&nbsp;</span> - vaba </span><span class='m-r'><span class='label label-warning'>&nbsp;</span> - täis </span><span><span class='label label-danger'>&nbsp;</span> - tühist. </span>">Legend</button></td></tr>
+												<tr><td></td><td><button type="button" class="label label-white pull-right m-t" data-container="body" data-toggle="popover" data-placement="top" data-content="">Legend</button></td></tr>
 											</tfoot>
 										</table>
 									</div>
