--- a/public/live/login.html
+++ b/public/live/login.html
@@ -8,10 +8,10 @@
 
 		<title>TTÜ.AUTH | Login</title>
 
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<link href="css/animate.min.css" rel="stylesheet">
-		<link href="css/style.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link href="css/animate.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 
 	</head>
 
@@ -22,11 +22,11 @@
 					<div id="logo-vertical-c" class="center-block"></div>
 				</div>
 				<span class="btn-group m-b pull-left">
-					<a id="uni-id-select" class="btn btn-xs btn-default" type="button">Uni-ID</a>
-					<a id="id-card-select" class="btn btn-xs btn-grey" type="button">ID-Kaart</a>
-					<a id="mobile-id-select" class="btn btn-xs btn-grey" type="button">Mobiil-ID</a>
+					<a id="uni-id-select" class="btn btn-sm btn-default" type="button">Uni-ID</a>
+					<a id="id-card-select" class="btn btn-sm btn-grey" type="button">ID-Kaart</a>
+					<a id="mobile-id-select" class="btn btn-sm btn-grey" type="button">Mobiil-ID</a>
 				</span>
-				<div class="btn-group pull-right m-b">
+				<div class=" btn-group pull-right m-b">
 					<a id="login-est" class="btn btn-xs btn-default">EST</a>
 					<a id="login-eng" class="btn btn-xs btn-grey">ENG</a>
 				</div>
@@ -39,8 +39,16 @@
 
 					<button type="submit" class="btn btn-primary block full-width m-b">Sisene</button>
 
-					<a href="#" style="margin-left: 25px;"><small>Unustasid salasõna?</small></a>
-					<a data-toggle="modal" href="#modal-form" class="fa fa-question-circle pull-right text-muted" style="font-size: 21px;"></a>
+					<div class="row">
+						<div class="col-xs-3">
+						</div>
+						<div class="col-xs-6">
+							<a href="#" style="margin-left: 0px;"><small>Unustasid salasõna?</small></a>
+						</div>
+						<div class="col-xs-3">
+						<a data-toggle="modal" href="#modal-form" class="fa fa-question-circle pull-right text-muted" style="font-size: 21px;"></a>
+						</div>
+					</div>
 				</form>
 				<p class="m-t row"> <small class="center-block col-xs-12">TTÜ siseveeb ver 0.1 &copy; 2015</small> </p>
 			</div>
@@ -95,9 +103,9 @@
 		</div>
 		<!-- END MODAL FOR HELP -->
 		<!-- Main scripts -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="js/login_scripts.min.js"></script>
+		<script src="js/jquery-2.1.1.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/login_scripts.js"></script>
 	</body>
 
 </html>
