--- a/public/live/login_v2.html
+++ b/public/live/login_v2.html
@@ -9,9 +9,8 @@
 		<title>TTÜ.AUTH | Login</title>
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
-		<link href="css/toastr.min.css" rel="stylesheet"/>
 		<link href="css/style.css" rel="stylesheet">
 
 	</head>
@@ -22,51 +21,35 @@
 				<div class="m-b">
 					<div id="logo-vertical-c" class="center-block"></div>
 				</div>
-				<div class="row">
-					<div class="col-xs-8 p-r-none">
-						<div class="btn-group pull-left">
-							<a id="uni-id-select" class="btn btn-sm btn-default" type="button">Uni-ID</a>
-							<a id="id-card-select" class="btn btn-sm btn-grey" type="button">ID-Kaart</a>
-							<a id="mobile-id-select" class="btn btn-sm btn-grey" type="button">Mobiil-ID</a>
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class=" btn-group pull-right m-b">
-							<a id="login-est" class="btn btn-xs btn-default">EST</a>
-							<a id="login-eng" class="btn btn-xs btn-grey">ENG</a>
-						</div>
-					</div>
-				</div>
+				<span class="btn-group m-b pull-left">
+					<a id="uni-id-select" class="btn btn-sm btn-default" type="button">Uni-ID</a>
+					<a id="id-card-select" class="btn btn-sm btn-grey" type="button">ID-Kaart</a>
+					<a id="mobile-id-select" class="btn btn-sm btn-grey" type="button">Mobiil-ID</a>
+				</span>
+
+
 				<form class="m-t" role="form" action="index.html">
 					<!-- UNI-ID CONTENT IS LOADED HERE -->
 					<div id="login-content" class=""></div>
-					<!-- UNI-ID CONTENT SHOWN WITH JS-->
-					<div id="login-content-wrapper">
-
-						<div id="login-content-uni-id" class="hidden">
-							<div class="form-group"><input type="text" class="form-control" placeholder="Kasutajanimi"></div><div class="form-group"><input type="password" class="form-control" placeholder="Salasõna"></div>
-						</div>
-						<div id="login-content-id-card" class="hidden"><div class="form-group"></div>
-						</div>
-						<div id="login-content-mobile-id" class="hidden"><div class="form-group"><input type="tel" class="form-control" placeholder="Mobiiltelefoni number"></div></div>
-					</div>
 					<!-- END UNI-ID CONTENT -->
 
 
 					<button type="submit" class="btn btn-primary block full-width m-b">Sisene</button>
-
 					<div class="row">
-						<div class="col-xs-3">
+						<div class="col-xs-3" style="padding-right: 0px;"><div class=" btn-group pull-left m-b">
+							<a id="login-est" class="btn btn-xs btn-default">EST</a>
+							<a id="login-eng" class="btn btn-xs btn-grey">ENG</a>
+							</div>
 						</div>
 						<div class="col-xs-6">
-							<a href="#"><small>Unustasid salasõna?</small></a>
+							<a href="#" style="margin-left: 0px;"><small>Unustasid salasõna?</small></a>
 						</div>
 						<div class="col-xs-3">
-							<a data-toggle="modal" href="#modal-form" class="fa fa-question-circle pull-right text-muted" style="font-size: 21px;"></a>
+						<a data-toggle="modal" href="#modal-form" class="fa fa-question-circle pull-right text-muted" style="font-size: 21px;"></a>
 						</div>
 					</div>
 				</form>
-				<p class="m-t row"> <small class="center-block col-xs-12">TTÜ siseveeb ver 0.1 &copy; 2015</small> </p>
+				<p class="row"> <small class="center-block col-xs-12">TTÜ siseveeb ver 0.1 &copy; 2015</small> </p>
 			</div>
 		</div>
 		<!-- MODAL FOR HELP -->
@@ -86,7 +69,7 @@
 							</p>
 
 							<p>
-								<a href="/it/et/doc/uni-id" class="wikilink1" title="it:et:doc:uni-id">Uni-ID tunnus</a> tekib ja sulgub vastavalt sisemistel protseduurireeglitele ning on seotud kasutaja isikukoodiga tehes võimalikuks kasutaja tuvastamine paralleelselt ka ID kaardiga / Mobiil-ID"ga.
+								<a href="/it/et/doc/uni-id" class="wikilink1" title="it:et:doc:uni-id">Uni-ID tunnus</a> tekib ja sulgub vastavalt sisemistel protseduurireeglitele ning on seotud kasutaja isikukoodiga tehes võimalikuks kasutaja tuvastamine paralleelselt ka ID kaardiga / Mobiil-ID'ga.
 							</p>
 
 							<p>
@@ -121,7 +104,6 @@
 		<!-- Main scripts -->
 		<script src="js/jquery-2.1.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/toastr.min.js"></script>
 		<script src="js/login_scripts.js"></script>
 	</body>
 
