--- a/public/login_v2.html
+++ b/public/login_v2.html
@@ -9,41 +9,54 @@
 		<title>TTÜ.AUTH | Login</title>
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 
 	</head>
 
 	<body class="gray-bg">
-
 		<div class="middle-box text-center loginscreen animated fadeInDown">
-			<div>
-				<div>
-					<h1 class="logo-name">TTÜ</h1>
+			<div class="ttu-login">
+				<div class="m-b">
+					<div id="logo-vertical-c" class="center-block"></div>
 				</div>
-				<div class="tab-content">
-					<div id="uni-id-content" class="">
-						<form class="m-t" role="form" action="index.html">
-							<div class="form-group">
-								<input type="email" class="form-control" placeholder="Kasutajanimi" required="">
-							</div>
-							<div class="form-group">
-								<input type="password" class="form-control" placeholder="Salasõna" required="">
-							</div>
-							<span class="btn-group m-b pull-left">
-								<button id="uni-id-select" class="btn btn-default btn-xs" type="button">Uni-ID</button>
-								<button id="id-card-select" class="btn btn-white btn-xs" type="button">ID kaart / Mobiil-ID</button>
-							</span>
-							<a data-toggle="modal" href="#modal-form" class="fa fa-question-circle pull-right text-muted" style="font-size: 21px;"></a>
-							<button type="submit" class="btn btn-primary block full-width m-b">Sisene</button>
-							<a href="#"><small>Unustasid salasõna?</small></a>
-						</form>
+				<div class="row">
+					<div class="col-xs-12">
+						<span class="btn-group m-b pull-left">
+							<a id="uni-id-select" class="btn btn-sm btn-default" type="button">Uni-ID</a>
+							<a id="id-card-select" class="btn btn-sm btn-grey" type="button">ID-Kaart</a>
+							<a id="mobile-id-select" class="btn btn-sm btn-grey" type="button">Mobiil-ID</a>
+						</span>
 					</div>
-					<div id="id-card-content" class="">blalalasdasd</div>
 				</div>
-				<p class="m-t"> <small>TTÜ siseveeb ver 0.1 &copy; 2015</small> </p>
+				<form class="m-t" role="form" action="index.html">
+					<!-- UNI-ID CONTENT SHOWN WITH JS-->
+					<div id="login-content-wrapper">
+					<div id="login-content-uni-id" class="hidden">
+						<div class='form-group'><input type='text' class='form-control' placeholder='Kasutajanimi'></div><div class='form-group'><input type='password' class='form-control' placeholder='Salasõna'></div>
+					</div>
+					<div id="login-content-id-card" class="hidden"><div class='form-group'></div>
+					</div>
+					<div id="login-content-mobile-id" class="hidden"><div class='form-group'><input type='tel' class='form-control' placeholder='Mobiiltelefoni number'></div></div>
+					</div>
+					<!-- END UNI-ID CONTENT -->
+					<button type="submit" class="btn btn-primary block full-width m-b">Sisene</button>
+					<div class="row">
+						<div class="col-xs-3 p-r-none"><div class=" btn-group pull-left m-b">
+							<a id="login-est" class="btn btn-xs btn-default">EST</a>
+							<a id="login-eng" class="btn btn-xs btn-grey">ENG</a>
+							</div>
+						</div>
+						<div class="col-xs-6">
+							<a href="#"><small>Unustasid salasõna?</small></a>
+						</div>
+						<div class="col-xs-3">
+							<a data-toggle="modal" href="#modal-form" class="fa fa-question-circle pull-right text-muted" style="font-size: 21px;"></a>
+						</div>
+					</div>
+				</form>
+				<p class="row"> <small class="center-block col-xs-12">TTÜ siseveeb ver 0.1 &copy; 2015</small> </p>
 			</div>
 		</div>
 		<!-- MODAL FOR HELP -->
@@ -95,18 +108,10 @@
 			</div>
 		</div>
 		<!-- END MODAL FOR HELP -->
-		<!-- Mainly scripts -->
-		<script src="js/jquery-2.1.1.js"></script>
+		<!-- Main scripts -->
+		<script src="js/jquery-2.1.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script>
-			$(document).ready(function(){
-
-				if ($("#uni-id-select").hasClass("btn-default")) {
-					$("")
-				}
-
-			})
-		</script>
+		<script src="js/login_scripts.js"></script>
 	</body>
 
 </html>
