navbar responsive adjust

--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,19 @@
 				<div class="row">
 					<nav class="navbar navbar-static-top white-bg" role="navigation">
 						<div class="navbar-header">
-							<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+							<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed pull-right" type="button">
 								<i class="fa fa-reorder"></i>
 							</button>
 							<a href="#" class="navbar-brand"><div id="logo-minimal-w"></div></a>
 						</div>
 						<div class="navbar-collapse collapse" id="navbar">
 							<ul class="nav navbar-nav">
-								<form role="search" class="navbar-form-custom" action="search_results.html">
-									<div class="form-group">
-										<input type="text" placeholder="&#xF002; Otsi midagi..." class="form-control" name="top-search" id="top-search">
+								<form class="navbar-form" role="search">
+									<div class="input-group">
+										<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
+										<div class="input-group-btn">
+											<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+										</div>
 									</div>
 								</form>
 								<li class="dropdown">
@@ -76,16 +79,6 @@
 										<li><a href="">Menu item</a></li>
 									</ul>
 								</li>
-								<li class="dropdown">
-									<a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Foorum <span class="caret"></span></a>
-									<ul role="menu" class="dropdown-menu">
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-									</ul>
-								</li>
-
 							</ul>
 							<ul class="nav navbar-top-links navbar-right">
 								<li class="dropdown">
@@ -183,12 +176,12 @@
 										</li>
 									</ul>
 								</li>
-								<li>
+								<li class="show-icon">
 									<a href="login.html">
 										<i class="fa fa-sign-out"></i>
 									</a>
 								</li>
-								<li>
+								<li  class="show-icon">
 									<a class="right-sidebar-toggle">
 										<i class="fa fa-tasks"></i>
 									</a>
@@ -201,6 +194,14 @@
 				<!--________ CONTENT BEGIN _____________-->
 				<div class="wrapper wrapper-content animated fadeInRight">
 					<div class="row">
+						<div class="col-lg-12">
+							<!--_ SPECIAL ALERT FOR MOBILE BEGIN _-->
+							<div id="ttu-alert-mobile" class="alert alert-danger alert-dismissable animated fadeInDown">
+								<button aria-hidden="true" data-dismiss="alert" class="close animation_select" type="button" data-animation="fadeOutUp">×</button>
+								<h4>Teade</h4>VI korpuses on elektrikatkestus 05.12.2014 10:00-12:00. <a class="alert-link" href="#">Vaata lähemalt</a>
+							</div>
+							<!--_SPECIAL ALERT FOR MOBILE END _-->
+						</div>
 						<div class="col-lg-12">
 							<!--________ LEFT COLUMN BEGIN _________-->
 							<div class="col-lg-3">
@@ -346,7 +347,7 @@
 							<!--________ MIDDLE COLUMN BEGIN _______-->
 							<div class="col-lg-6">
 								<!--_________ SPECIAL ALERT BEGIN ______-->
-								<div id="ttu-alert" class="alert alert-danger alert-dismissable animated fadeInDown">
+								<div id="ttu-alert-desktop" class="alert alert-danger alert-dismissable animated fadeInDown">
 									<button aria-hidden="true" data-dismiss="alert" class="close animation_select" type="button" data-animation="fadeOutUp">×</button>
 									<h4>Teade</h4>VI korpuses on elektrikatkestus 05.12.2014 10:00-12:00. <a class="alert-link" href="#">Vaata lähemalt</a>
 								</div>
@@ -377,30 +378,24 @@
 										<div class="">
 											<div class="faq-item">
 												<div class="row">
-													<div class="col-md-7">
-														<a data-toggle="collapse" href="#uudis1" class="faq-question">TTÜ teadlased said jälile igavese elu saladusele</a>
+													<div class="col-lg-9">
+														<a data-toggle="collapse" href="#uudis1" class="faq-question">TTÜ allkirjastas lepingu Korea instituudi sihtasutusega</a>
 														<small>Lisanud <strong>Evelin Jakovleva</strong> <i class="fa fa-clock-o"></i> Kolmapäev 14:40 - 24.06.2014</small>
 													</div>
-													<div class="col-md-3">
+													<div class="col-lg-3">
 														<span class="small font-bold">Kategooria</span>
 														<div class="tag-list">
 															<span class="tag-item">Teadus</span>
 															<span class="tag-item">Innovatsioon</span>
 														</div>
 													</div>
-													<div class="col-md-2 text-right">
-														<span class="small font-bold">Lisa järjehoidja </span>
-														<br/>
-														<i class="fa fa-bookmark"></i>
-													</div>
 												</div>
 												<div class="row">
 													<div class="col-lg-12">
 														<div id="uudis1" class="panel-collapse collapse ">
 															<div class="faq-answer">
-																<p>
-																	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, eius neque hic necessitatibus expedita, fugit at cum? Perspiciatis eos, et doloremque blanditiis! Blanditiis, adipisci sequi modi perspiciatis, consequuntur reiciendis tenetur dicta esse laudantium id! Deserunt modi, architecto. Cumque accusantium libero quisquam veniam, necessitatibus, assumenda quod nisi iusto eaque blanditiis quia nulla placeat ipsum dolores deleniti voluptate aliquid delectus suscipit explicabo fuga ad. Dolorem modi ipsam tempora perspiciatis nostrum quo consectetur veritatis quisquam dicta ipsa est, error, itaque placeat dolore praesentium nisi, natus nulla nihil maiores fuga soluta nam fugiat, sed repellat. Praesentium debitis iure placeat ducimus quia explicabo saepe cupiditate.
-																</p>
+																<p><strong>Käesoleval suvel allkirjastasid TTÜ ja King Sejongi instituudi sihtasutus lepingu, mis volitab meie ülikooli juhtima Tallinna King Sejongi instituuti (TKSI), mis tegutseb TTÜ rahvusvaheliste suhete instituudi ning selle kooseisus oleva Aasia ja Vaikse ookeani uuringute keskuse egiidi all.</strong></p> <p>TKSI on  esimene omalaadne institutsioon Eestis ning selle töö on suunatud korea kultuuri ja korea keele õpetamisele võõrkeelena või teise keelena. Strateegilisest küljest on niisugune areng väga tähtis, pidades silmas TTÜ aktiivse rolli tunnustamist Aasia ja Vaikse ookeani piirkonna uuringute valdkonna õpingute edendamise protsessis rahvusvaheliste suhete eriala bakalaureuse- ja magistriõppe raames. King Sejongi instituudi töö alustamisega seoses esitas 2015. aastal oma taotluse King Sejongi instituudi sihtasutusele kokku 70 haridusasutust 31-st riigist, ning TTÜ osutus üheks 16-st õnnelikust võitjast.</p><p>TTÜ soovib tänada kõiki avalduste esitamise protsessi kaasatud inimesi, ning avaldab erilist tänu meie külalisprofessor  Dong Hyeon Jung’ile. TKSI alustab akadeemilise tegevusega eeloleval semestril, kui hakatakse õpetama korea keelt algtasemel. Instituut ja selle töötajad loodavad äratada suure hulga tudengite huvi Korea ja selle mitmekülgse kultuuri vastu.</p>
+																<p><strong>Lisainfo</strong>&#160;Anna-Maria Nizovtseva <a id="obfuscated_email_12" href="mailto:anna-maria dot nizovtseva at ttu dot ee">anna-maria.nizovtseva@ttu.ee</a></p>
 															</div>
 														</div>
 													</div>
@@ -408,22 +403,18 @@
 											</div>
 											<div class="faq-item">
 												<div class="row">
-													<div class="col-md-7">
+													<div class="col-lg-9">
 														<a data-toggle="collapse" href="#uudis2" class="faq-question">Mida toob kaasa haridusreform</a>
 														<small>Lisanud <strong>Sander Marandi</strong> <i class="fa fa-clock-o"></i> Esmaspäev 9:20 - 20.06.2014</small>
 													</div>
-													<div class="col-md-3">
+													<div class="col-lg-3">
 														<span class="small font-bold">Kategooria</span>
 														<div class="tag-list">
 															<span class="tag-item">õppimine</span>
 															<span class="tag-item">tudeng</span>
 														</div>
 													</div>
-													<div class="col-md-2 text-right">
-														<span class="small font-bold">Lisa järjehoidja </span>
-														<br/>
-														<i class="fa fa-bookmark"></i>
-													</div>
+
 												</div>
 												<div class="row">
 													<div class="col-lg-12">
@@ -439,21 +430,16 @@
 											</div>
 											<div class="faq-item">
 												<div class="row">
-													<div class="col-md-7">
+													<div class="col-lg-9">
 														<a data-toggle="collapse" href="#uudis3" class="faq-question">Mis on populaarseimad erialad TTÜ-s?</a>
 														<small>Lisanud <strong>Priit Tamm</strong> <i class="fa fa-clock-o"></i> Reede 17:40 - 19.06.2014</small>
 													</div>
-													<div class="col-md-3">
+													<div class="col-lg-3">
 														<span class="small font-bold">Kategooria</span>
 														<div class="tag-list">
 															<span class="tag-item">õppimine</span>
 															<span class="tag-item">tudeng</span>
 														</div>
-													</div>
-													<div class="col-md-2 text-right">
-														<span class="small font-bold">Lisa järjehoidja </span>
-														<br/>
-														<i class="fa fa-bookmark"></i>
 													</div>
 												</div>
 												<div class="row">
@@ -470,20 +456,15 @@
 											</div>
 											<div class="faq-item">
 												<div class="row">
-													<div class="col-md-7">
+													<div class="col-lg-9">
 														<a data-toggle="collapse" href="#sundmus1" class="faq-question">Jõulukaartide tellimine</a>
 														<small>Lisanud <strong>Evelin Jakovleva</strong> <i class="fa fa-clock-o"></i> Kolmapäev 14:40 - 24.06.2014</small>
 													</div>
-													<div class="col-md-3">
+													<div class="col-lg-3">
 														<span class="small font-bold">Kategooria</span>
 														<div class="tag-list">
 															<span class="tag-item">jõulud</span>
 														</div>
-													</div>
-													<div class="col-md-2 text-right">
-														<span class="small font-bold">Lisa järjehoidja </span>
-														<br/>
-														<i class="fa fa-bookmark"></i>
 													</div>
 												</div>
 												<div class="row">
@@ -500,21 +481,16 @@
 											</div>
 											<div class="faq-item">
 												<div class="row">
-													<div class="col-md-7">
+													<div class="col-lg-9">
 														<a data-toggle="collapse" href="#sundmus2" class="faq-question">TTÜ meenete soodusmüük</a>
 														<small>Lisanud <strong>Sander Marandi</strong> <i class="fa fa-clock-o"></i> Esmaspäev 9:20 - 20.06.2014</small>
 													</div>
-													<div class="col-md-3">
+													<div class="col-lg-3">
 														<span class="small font-bold">Kategooria</span>
 														<div class="tag-list">
 															<span class="tag-item">turundus</span>
 															<span class="tag-item">tudeng</span>
 														</div>
-													</div>
-													<div class="col-md-2 text-right">
-														<span class="small font-bold">Lisa järjehoidja </span>
-														<br/>
-														<i class="fa fa-bookmark"></i>
 													</div>
 												</div>
 												<div class="row">
@@ -531,21 +507,16 @@
 											</div>
 											<div class="faq-item">
 												<div class="row">
-													<div class="col-md-7">
+													<div class="col-lg-9">
 														<a data-toggle="collapse" href="#sundmus3" class="faq-question">Ideekonkurss "Tallinna Tehnikaülikool 100" </a>
 														<small>Lisanud <strong>Priit Tamm</strong> <i class="fa fa-clock-o"></i> Reede 17:40 - 19.06.2014</small>
 													</div>
-													<div class="col-md-3">
+													<div class="col-lg-3">
 														<span class="small font-bold">Kategooria</span>
 														<div class="tag-list">
 															<span class="tag-item">õppimine</span>
 															<span class="tag-item">tudeng</span>
 														</div>
-													</div>
-													<div class="col-md-2 text-right">
-														<span class="small font-bold">Lisa järjehoidja </span>
-														<br/>
-														<i class="fa fa-bookmark"></i>
 													</div>
 												</div>
 												<div class="row">
@@ -898,88 +869,88 @@
 					</div>
 				</div>
 			</div>
-			<!--_________ SMALL CHAT ________-->
-			<div class="small-chat-box fadeInRight animated">
+			<!--_________ SMALL CHAT ________
+<div class="small-chat-box fadeInRight animated">
 
-				<div class="heading" draggable="true">
-					<small class="chat-date pull-right">
-						02.19.2015
-					</small>
-					Messenger
-				</div>
+<div class="heading" draggable="true">
+<small class="chat-date pull-right">
+02.19.2015
+</small>
+Messenger
+</div>
 
-				<div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 234px;"><div class="content" style="overflow: hidden; width: auto; height: 234px;">
+<div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 234px;"><div class="content" style="overflow: hidden; width: auto; height: 234px;">
 
-					<div class="left">
-						<div class="author-name">
-							Sander Marandi <small class="chat-date">
-							10:02
-							</small>
-						</div>
-						<div class="chat-message active">
-							Lorem ipsum dolor sit amet, consectetur.
-						</div>
+<div class="left">
+<div class="author-name">
+Sander Marandi <small class="chat-date">
+10:02
+</small>
+</div>
+<div class="chat-message active">
+Lorem ipsum dolor sit amet, consectetur.
+</div>
 
-					</div>
-					<div class="right">
-						<div class="author-name">
-							Priit Tamm
-							<small class="chat-date">
-								11:24
-							</small>
-						</div>
-						<div class="chat-message">
-							Lorem ipsum dolor.
-						</div>
-					</div>
-					<div class="left">
-						<div class="author-name">
-							Sander Marandi
-							<small class="chat-date">
-								12:45
-							</small>
-						</div>
-						<div class="chat-message active">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur.
-						</div>
-					</div>
-					<div class="right">
-						<div class="author-name">
-							Priit Tamm
-							<small class="chat-date">
-								13:24
-							</small>
-						</div>
-						<div class="chat-message">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam asperiores repudiandae, cumque repellendus reprehenderit voluptates, neque, praesentium aliquam ducimus non iure!
-						</div>
-					</div>
-					<div class="left">
-						<div class="author-name">
-							Sander Marandi
-							<small class="chat-date">
-								14:45
-							</small>
-						</div>
-						<div class="chat-message active">
-							Lorem ipsum dolor sit amet, consectetur.
-						</div>
-					</div>
-					</div><div class="slimScrollBar" style="width: 7px; position: absolute; top: 0px; opacity: 0.4; display: block; border-radius: 7px; z-index: 99; right: 1px; background: rgb(0, 0, 0);"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.4; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div></div>
-				<div class="form-chat">
-					<div class="input-group input-group-sm"><input type="text" class="form-control"> <span class="input-group-btn"> <button class="btn btn-primary" type="button">Send
-						</button> </span></div>
-				</div>
+</div>
+<div class="right">
+<div class="author-name">
+Priit Tamm
+<small class="chat-date">
+11:24
+</small>
+</div>
+<div class="chat-message">
+Lorem ipsum dolor.
+</div>
+</div>
+<div class="left">
+<div class="author-name">
+Sander Marandi
+<small class="chat-date">
+12:45
+</small>
+</div>
+<div class="chat-message active">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur.
+</div>
+</div>
+<div class="right">
+<div class="author-name">
+Priit Tamm
+<small class="chat-date">
+13:24
+</small>
+</div>
+<div class="chat-message">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam asperiores repudiandae, cumque repellendus reprehenderit voluptates, neque, praesentium aliquam ducimus non iure!
+</div>
+</div>
+<div class="left">
+<div class="author-name">
+Sander Marandi
+<small class="chat-date">
+14:45
+</small>
+</div>
+<div class="chat-message active">
+Lorem ipsum dolor sit amet, consectetur.
+</div>
+</div>
+</div><div class="slimScrollBar" style="width: 7px; position: absolute; top: 0px; opacity: 0.4; display: block; border-radius: 7px; z-index: 99; right: 1px; background: rgb(0, 0, 0);"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.4; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div></div>
+<div class="form-chat">
+<div class="input-group input-group-sm"><input type="text" class="form-control"> <span class="input-group-btn"> <button class="btn btn-primary" type="button">Send
+</button> </span></div>
+</div>
 
-			</div>
-			<div id="small-chat">
-				<span class="badge badge-warning pull-right">5</span>
-				<a class="open-small-chat">
-					<i class="fa fa-comments"></i>
+</div>
+<div id="small-chat">
+<span class="badge badge-warning pull-right">5</span>
+<a class="open-small-chat">
+<i class="fa fa-comments"></i>
 
-				</a>
-			</div>
-			<!--_________ END SMALL CHAT ________-->
+</a>
+</div>
+_________ END SMALL CHAT ________-->
 		</div>
 		<!--_________PLUGINS JS__________________ -->
 		<script src="js/plugins/fullcalendar/moment.min.js"></script>
