--- a/public/index.html
+++ b/public/index.html
@@ -672,7 +672,7 @@
 				</div>
 				<!--________FOOTER END____________-->
 				<!-- _______MODAL CONTENT BEGIN_______________-->
-				<div id="right-sidebar" class="">
+				<div id="right-sidebar-dash" class="">
 					<div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 100%;">
 						<div class="sidebar-container" style="overflow: hidden; width: auto; height: 100%;">
 
