navbar large  dropdown enhancements

--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,9 @@
 																								<li class="level-3"><a href="#">TTÜ põhikirja analüüs</a></li>
 																								<li class="level-3"><a href="#">TTÜ põhikirja ülevaade</a></li>
 																								<li class="level-3"><a href="#">TTÜ põhikirja kriitika</a></li>
+																								<li class="level-3"><a href="#">TTÜ põhikirja paraboolne eksistents</a></li>
+																								<li class="level-3"><a href="#">TTÜ põhikirja kaatet</a></li>
+																								<li class="level-3"><a href="#">TTÜ põhikirja sinusoidne üleminek paberkandjale</a></li>
 																								</div>
 																								<li class="level-2"><a href="#">TTÜ arengukava 2011−2015</a></li>
 																								<li class="level-2"><a href="#">TTÜ kollektiivleping</a></li>
