--- a/public/lahetus.html
+++ b/public/lahetus.html
@@ -122,19 +122,28 @@
 					<nav class="navbar navbar-static-top white-bg" role="navigation">
 						<div class="navbar-header">
 							<a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-							<form class="navbar-form" role="search">
-								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
-									<div class="input-group-btn">
-										<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-									</div>
-								</div>
-							</form>
 
 							<ul class="nav navbar-nav">
+							<li class="dropdown">
+                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Dokumendid <span class="caret"></span></a>
+                        <ul role="menu" class="dropdown-menu">
+                            <li><a href="">Menu item</a></li>
+                            <li><a href="">Menu item</a></li>
+                            <li><a href="">Menu item</a></li>
+                            <li><a href="">Menu item</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Ülikool <span class="caret"></span></a>
+                        <ul role="menu" class="dropdown-menu">
+                            <li><a href="">Menu item</a></li>
+                            <li><a href="">Menu item</a></li>
+                            <li><a href="">Menu item</a></li>
+                            <li><a href="">Menu item</a></li>
+                        </ul>
+                    </li>
 								<li class="dropdown dropdown-large">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dokumendid <b class="caret"></b></a>
-
+									<a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Inimesed <span class="caret"></span></a>
 									<ul class="dropdown-menu dropdown-menu-large row">
 										<li class="col-sm-4">
 											<ul>
@@ -177,145 +186,164 @@
 										</li>
 									</ul>
 
+								</li>
+								<!-- TÖÖKORRALDUS BEGIN -->
+								<li class="dropdown dropdown-large" id="too"></li>
+								<!-- TÖÖKORRALDUS END -->
+								<li class="dropdown dropdown-large">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teenused <b class="caret"></b></a>
+									<ul class="dropdown-menu dropdown-menu-large row">
 
-								</li>
-								<li class="dropdown">
-									<a role="button" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> Töökorraldus <span class="caret"></span></a>
-									<ul role="menu" class="dropdown-menu">
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a role="button" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> Koolitused <span class="caret"></span></a>
-									<ul role="menu" class="dropdown-menu">
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-									</ul>
-								</li>
-								<li class="dropdown">
-									<a role="button" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> Teenused <span class="caret"></span></a>
-									<ul role="menu" class="dropdown-menu">
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
-										<li><a href="">Menu item</a></li>
+										<li class="col-sm-4">
+											<ul>
+
+												<li class="level-1 dropdown-header"><a href="#">Põhiline</a></li>
+												<li class="level-2"><a href="#">TTÜ põhikiri</a></li>
+												<div class="l3">
+													<li class="level-3"><a href="#">TTÜ põhikirja analüüs</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja ülevaade</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja kriitika</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja paraboolne eksistents</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja kaatet</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja sinusoidne üleminek paberkandjale</a></li>
+												</div>
+												<li class="level-2"><a href="#">TTÜ arengukava 2011−2015</a></li>
+												<li class="level-2"><a href="#">TTÜ kollektiivleping</a></li>
+												<li class="level-2"><a href="#">TTÜ juhtimissüsteemi käsiraamat</a></li>
+												<li class="level-2"><a href="#">TTÜ seadus (Riigi Teataja)</a></li>
+												<li class="level-2"><a href="#">Ülikooliseadus (Riigi Teataja)</a></li>
+												<li class="level-2"><a href="#">Teadus- ja arendustegevuse korralduse seadus (Riigi Teataja)</a></li>
+												<li class="level-2"><a href="#">Kõrgharidusstandard (Riigi Teataja)</a></li>
+												<li class="level-1 dropdown-header"><a href="#">Õigusaktid</a></li>
+												<li class="level-2"><a href="#">Kuratooriumi määrused</a></li>
+												<li class="level-2"><a href="#">Kuratooriumi otsused</a></li>
+												<li class="level-2"><a href="#">Nõukogu määrused</a></li>
+												<li class="level-2"><a href="#">Nõukogu otsused</a></li>
+												<li class="level-2"><a href="#">Üldkäskkirjad</a></li>
+												<li class="level-2"><a href="#">Personalikäskkirjad</a></li>
+												<li class="level-2"><a href="#">Korraldused</a></li>
+												<li class="level-2"><a href="#">Korraldused asendaja määramiseks</a></li>
+												<li class="level-2"><a href="#">Riigihangete korraldused</a></li>
+												<li class="level-2"><a href="#">Dekaani
+													korraldused</a></li>
+												<div class="l3">
+													<li class="level-3"><a href="#">TTÜ põhikirja analüüs</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja ülevaade</a></li>
+													<li class="level-3"><a href="#">TTÜ põhikirja kriitika</a></li>
+												</div>
+											</ul></li>
+										<li class="col-sm-4">
+											<ul>
+												<li class="level-1 dropdown-header"><a href="#">Terviktekstid, vormid</a></li>
+												<li class="level-2"><a href="#">Õppetöö</a></li>
+												<li class="level-2"><a href="#">Teadus- ja arendustöö</a></li>
+												<li class="level-2"><a href="#">Täiendusõpe</a></li>
+												<li class="level-2"><a href="#">Personalitöö</a></li>
+												<li class="level-2"><a href="#">Dokumendihaldus</a></li>
+												<li class="level-2"><a href="#">Lepingud ja volikirjad</a></li>
+												<li class="level-2"><a href="#">Finantstegevus</a></li>
+												<li class="level-2"><a href="#">Haldus-majandustegevus</a></li>
+												<li class="level-2"><a href="#">Statuudid</a></li>
+												<li class="level-2"><a href="#">Hinnakirjad</a></li>
+												<li class="level-2"><a href="#">Arengukavad ja strateegiad</a></li>
+												<li class="level-2"><a href="#">Asutuste põhikirjad</a></li>
+												<li class="level-2"><a href="#">Akadeemiliste struktuuriüksuste põhimäärused</a></li>
+												<li class="level-2"><a href="#">Haldus-tugistruktuuriüksuste põhimäärused</a></li>
+												<li class="level-2"><a href="#">Otsustuskogude töö</a></li>
+												<li class="level-2"><a href="#">TTÜ struktuur ja üldandmed</a></li>
+												<li class="level-1 dropdown-header"><a href="#">Kirjaregister</a></li>
+												<li class="level-2"><a href="#">Volikirjade register</a></li>
+												<li class="level-2"><a href="#">Lepingute register</a></li>
+												<li class="level-2"><a href="#">Lähetuste register</a></li>
+												<li class="level-2"><a href="#">TTÜga seotud juriidiliste isikute register</a></li>
+												<li class="level-2"><a href="#">Õigusaktide audit</a></li>
+												<li class="level-2"><a href="#">Õigusaktide tõlked (regulations and documents)</a></li>
+												<li class="level-2"><a href="#">Ingliskeelne terminoloogia</a></li>
+											</ul></li>
+										<li class="col-sm-4">
+											<ul>
+												<li class="level-1 dropdown-header"><a href="#">Mallid</a></li>
+												<li class="level-2"><a href="#">Dokumendimallid</a></li>
+												<li class="level-2"><a href="#">Näidisdokumendid</a></li>
+												<li class="level-2"><a href="#">Slaidimallid</a></li>
+												<li class="level-1 dropdown-header"><a href="#">Turundusmaterjalid</a></li>
+												<li class="level-2"><a href="#">TTÜ brändi ja tunnusgraafika kogumik</a></li>
+												<li class="level-2"><a href="#">Logod</a></li>
+												<li class="level-2"><a href="#">Rahvusvahelise turunduse käsiraamat</a></li>
+												<li class="level-1 dropdown-header"><a href="#">Infotund, avakoosolekud</a></li>
+												<li class="level-2"><a href="#">Üleülikooliline infotund</a></li>
+												<li class="level-2"><a href="#">Rektori kõned õppeaasta avakoosolekul</a></li>
+											</ul>
+										</li>
 									</ul>
 								</li>
 							</ul>
 
 						</div>
 						<ul class="nav navbar-top-links navbar-right">
-							<li class="dropdown">
-								<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#" aria-expanded="false">
-									<i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
-								</a>
-								<ul class="dropdown-menu dropdown-messages">
-									<li>
-										<div class="dropdown-messages-box">
-											<a href="profile.html" class="pull-left">
-												<i class="fa fa-envelope-o fa-3x"></i>
-											</a>
-											<div class="media-body">
-												<small class="pull-right">14.08.2015</small>
-												<strong>Eelarve lisad</strong><br>
-												<small class="text-muted">Margus Vooglaid</small>
-											</div>
-										</div>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<div class="dropdown-messages-box">
-											<a href="profile.html" class="pull-left">
-												<i class="fa fa-envelope-o fa-3x"></i>
-											</a>
-											<div class="media-body">
-												<small class="pull-right">12.08.2015</small>
-												<strong>Viiamne võimalus registreerida ennast tuleohutus- koolitusele </strong><br>
-												<small class="text-muted">Priit Tamm</small>
-											</div>
-										</div>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<div class="dropdown-messages-box">
-											<a href="profile.html" class="pull-left">
-												<i class="fa fa-envelope-o fa-3x"></i>
-											</a>
-											<div class="media-body">
-												<small class="pull-right">14.08.2015</small>
-												<strong>Huvitavat lugemist</strong><br>
-												<small class="text-muted">Sander Marandi</small>
-											</div>
-										</div>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<div class="text-center link-block">
+								<li class="dropdown">
+									<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+										<i class="fa fa-bell"></i>  <span class="label label-primary">3</span>
+									</a>
+									<ul class="dropdown-menu dropdown-alerts">
+										<li>
 											<a href="mailbox.html">
-												<i class="fa fa-envelope"></i> <strong>Loe kõiki emaile</strong>
+												<div>
+													<i class="fa fa-envelope fa-fw"></i> Sul on 3 uut sõnumit
+													<span class="pull-right text-muted small">19 minutit tagasi</span>
+												</div>
 											</a>
-										</div>
-									</li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-									<i class="fa fa-bell"></i>  <span class="label label-primary">3</span>
-								</a>
-								<ul class="dropdown-menu dropdown-alerts">
-									<li>
-										<a href="mailbox.html">
-											<div>
-												<i class="fa fa-envelope fa-fw"></i> Sul on 3 uut sõnumit
-												<span class="pull-right text-muted small">19 minutit tagasi</span>
-											</div>
-										</a>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<a href="profile.html">
-											<div>
-												<i class="fa fa-calendar-o fa-fw"></i> Täna plaanis 2 sündmust
-												<span class="pull-right text-muted small">56 minutit tagasi</span>
-											</div>
-										</a>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<a href="grid_options.html">
-											<div>
-												<i class="fa fa-upload fa-fw"></i> Kõik uuendused tehtud
-												<span class="pull-right text-muted small">4h tagasi</span>
-											</div>
-										</a>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<div class="text-center link-block">
-											<a href="notifications.html">
-												<strong>Vaata kõiki teavitusi</strong>
-												<i class="fa fa-angle-right"></i>
+										</li>
+										<li class="divider"></li>
+										<li>
+											<a href="profile.html">
+												<div>
+													<i class="fa fa-calendar-o fa-fw"></i> Täna plaanis 2 sündmust
+													<span class="pull-right text-muted small">56 minutit tagasi</span>
+												</div>
 											</a>
+										</li>
+										<li class="divider"></li>
+										<li>
+											<a href="grid_options.html">
+												<div>
+													<i class="fa fa-upload fa-fw"></i> Kõik uuendused tehtud
+													<span class="pull-right text-muted small">4h tagasi</span>
+												</div>
+											</a>
+										</li>
+										<li class="divider"></li>
+										<li>
+											<div class="text-center link-block">
+												<a href="notifications.html">
+													<strong>Vaata kõiki teavitusi</strong>
+													<i class="fa fa-angle-right"></i>
+												</a>
+											</div>
+										</li>
+									</ul>
+								</li>
+								<li class="show-icon">
+									<a href="login.html">
+										<i class="fa fa-sign-out"></i>
+									</a>
+								</li>
+								<li  class="show-icon">
+									<a class="right-sidebar-toggle">
+										<i class="fa fa-tasks"></i>
+									</a>
+								</li>
+							</ul>
+							<ul class="nav navbar-top-links navbar-right">
+								<form class="navbar-form " role="search">
+									<div class="input-group">
+										<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
+										<div class="input-group-btn">
+											<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 										</div>
-									</li>
-								</ul>
-							</li>
-							<li class="show-icon">
-								<a href="login.html">
-									<i class="fa fa-sign-out"></i>
-								</a>
-							</li>
-							<li  class="show-icon">
-								<a class="right-sidebar-toggle">
-									<i class="fa fa-tasks"></i>
-								</a>
-							</li>
-						</ul>
+									</div>
+								</form>
+							</ul>
 
 					</nav>
 				</div>
@@ -666,6 +694,7 @@
 				<script src="js/plugins/x-editable/bootstrap-editable.js"></script>
 				<script src="js/plugins/iCheck/icheck.min.js"></script>
 				<script src="js/plugins/switchery/switchery.min.js"></script>
+				<script src="js/navbar_menu.js"></script>
 				<script src="js/lahetus.js"></script>
 				<!--___________ ON PAGE SCRIPTS_______________________ -->
 				<script>
