--- a/public/lahetus_lisa_uus.html
+++ b/public/lahetus_lisa_uus.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>TTÜ | Lähetused</title>
+		<title>TTÜ | Lisa uus lähetus</title>
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 
 	</head>
 
-	<body class="">
+	<body>
 
 		<div id="wrapper">
 			<!-- ________SIDEBAR__________________________-->
@@ -132,7 +132,7 @@
 			<div id="page-wrapper" class="gray-bg">
 				<!--_____TOP NAVBAR _______________-->
 				<div class="row border-bottom">
-					<nav class="navbar navbar-static-top cherry-bg" role="navigation">
+					<nav class="navbar navbar-static-top white-bg" role="navigation">
 						<div class="navbar-header">
 							<a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
 
@@ -293,72 +293,70 @@
 							</ul>
 
 						</div>
-						<!--RIGHT NAVBAR
-							---------------------------------------------------------->
-							<ul class="nav navbar-top-links navbar-right">
-								<li class="dropdown m-l">
-									<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-										<i class="fa fa-bell"></i>  <span class="label label-primary">3</span>
-									</a>
-									<ul class="dropdown-menu dropdown-alerts">
-										<li>
-											<a href="mailbox.html">
-												<div>
-													<i class="fa fa-envelope fa-fw"></i> Sul on 3 uut sõnumit
-													<span class="pull-right text-muted small">19 minutit tagasi</span>
-												</div>
-											</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="profile.html">
-												<div>
-													<i class="fa fa-calendar-o fa-fw"></i> Täna plaanis 2 sündmust
-													<span class="pull-right text-muted small">56 minutit tagasi</span>
-												</div>
-											</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="grid_options.html">
-												<div>
-													<i class="fa fa-upload fa-fw"></i> Kõik uuendused tehtud
-													<span class="pull-right text-muted small">4h tagasi</span>
-												</div>
-											</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<div class="text-center link-block">
-												<a href="notifications.html">
-													<strong>Vaata kõiki teavitusi</strong>
-													<i class="fa fa-angle-right"></i>
-												</a>
+						<ul class="nav navbar-top-links navbar-right">
+							<li class="dropdown">
+								<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+									<i class="fa fa-bell"></i>  <span class="label label-primary">3</span>
+								</a>
+								<ul class="dropdown-menu dropdown-alerts">
+									<li>
+										<a href="mailbox.html">
+											<div>
+												<i class="fa fa-envelope fa-fw"></i> Sul on 3 uut sõnumit
+												<span class="pull-right text-muted small">19 minutit tagasi</span>
 											</div>
-										</li>
-									</ul>
-								</li>
-								<li class="show-icon ">
-									<a href="login.html">
-										<i class="fa fa-sign-out"></i>
-									</a>
-								</li>
-								<li  class="show-icon hidden-xs">
-									<a class="right-sidebar-toggle">
-										<i class="fa fa-tasks"></i>
-									</a>
-								</li>
-							</ul>
-							<!--RIGHT NAVBAR END
-							---------------------------------------------------------->
-							<!--NAVBAR SEARCH
-							---------------------------------------------------------->
-							<ul class="nav navbar-top-links navbar-right visible-md visible-lg">
-								<form>
-									<input type="text" class="form-control" placeholder="&#xF002; Otsi midagi..." name="srch-term" id="srch-term" style="font-family:Arial, FontAwesome"></form>
-							</ul>
-							<!--NAVBAR SEARCH END
-							---------------------------------------------------------->
+										</a>
+									</li>
+									<li class="divider"></li>
+									<li>
+										<a href="profile.html">
+											<div>
+												<i class="fa fa-calendar-o fa-fw"></i> Täna plaanis 2 sündmust
+												<span class="pull-right text-muted small">56 minutit tagasi</span>
+											</div>
+										</a>
+									</li>
+									<li class="divider"></li>
+									<li>
+										<a href="grid_options.html">
+											<div>
+												<i class="fa fa-upload fa-fw"></i> Kõik uuendused tehtud
+												<span class="pull-right text-muted small">4h tagasi</span>
+											</div>
+										</a>
+									</li>
+									<li class="divider"></li>
+									<li>
+										<div class="text-center link-block">
+											<a href="notifications.html">
+												<strong>Vaata kõiki teavitusi</strong>
+												<i class="fa fa-angle-right"></i>
+											</a>
+										</div>
+									</li>
+								</ul>
+							</li>
+							<li class="show-icon">
+								<a href="login.html">
+									<i class="fa fa-sign-out"></i>
+								</a>
+							</li>
+							<li  class="show-icon">
+								<a class="right-sidebar-toggle">
+									<i class="fa fa-tasks"></i>
+								</a>
+							</li>
+						</ul>
+						<ul class="nav navbar-top-links navbar-right navbar-search">
+							<form class="navbar-form" role="search">
+								<div class="input-group">
+									<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term-nav">
+									<div class="input-group-btn">
+										<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+									</div>
+								</div>
+							</form>
+						</ul>
 
 					</nav>
 				</div>
@@ -392,10 +390,10 @@
 							<div class="col-xs-6 text-right">Amet</div><div class="col-xs-6"><a href="#" id="position" data-type="text" data-pk="1" data-url="/post">Arendusjuht</a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Lähetuse kestus</div><div class="col-xs-6"><a href="#" id="errand_duration_b" data-type="combodate" data-value="2015-05-15" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click">15/05/2015</a> - <a href="#" id="errand_duration_e" data-type="combodate" data-value="2015-05-19" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click">19/05/2015</a></div>
+							<div class="col-xs-6 text-right">Lähetuse kestus</div><div class="col-xs-6"><a href="#" id="errand_duration_b" data-type="combodate" data-value="" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click"></a> - <a href="#" id="errand_duration_e" data-type="combodate" data-value="" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click"></a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Finantseerimise allikad</div><div class="col-xs-6"><a href="#" id="financing" data-type="text" data-pk="1" data-url="/post">NATO</a></div>
+							<div class="col-xs-6 text-right">Finantseerimise allikad</div><div class="col-xs-6"><a href="#" id="financing" data-type="text" data-pk="1" data-url="/post" data-placeholder="Puuduvad"></a></div>
 						</div>
 					</div>
 					<!--______ 1ST BLOCK ERRAND FORM END ______-->
@@ -403,17 +401,17 @@
 					<div>
 						<div class="row"><div class="col-sm-12 text-center font-bold m-b-xs m-t-md">Lähetuse sisu</div></div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Sihtkoht</div><div class="col-xs-6"><a href="#" id="destination" data-type="text" data-pk="1" data-title="Please, fill address">Holland</a>
+							<div class="col-xs-6 text-right">Sihtkoht</div><div class="col-xs-6"><a href="#" id="destination" data-type="text" data-pk="1" data-title="Please, fill address"></a>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Organisatsioon</div><div class="col-xs-6"><a href="#" id="organization" data-type="text" data-pk="1" data-url="/post">MSG-117 </a></div>
+							<div class="col-xs-6 text-right">Organisatsioon</div><div class="col-xs-6"><a href="#" id="organization" data-type="text" data-pk="1" data-url="/post"></a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Lähetuse eesmärk</div><div class="col-xs-6"><a href="#" id="errand_goal" data-type="text" data-pk="1" data-url="/post">MSG-117 töögrupi 8's kogunemine</a></div>
+							<div class="col-xs-6 text-right">Lähetuse eesmärk</div><div class="col-xs-6"><a href="#" id="errand_goal" data-type="text" data-pk="1" data-url="/post"></a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Sõiduvahend</div><div class="col-xs-6"><a href="#" id="transportation" data-type="checklist" data-value="1,4,5" data-title="Select transportation" class="editable editable-click" data-original-title="" title="">auto<br>laev<br>rong</a></div>
+							<div class="col-xs-6 text-right">Sõiduvahend</div><div class="col-xs-6"><a href="#" id="transportation" data-type="checklist" data-value="" data-title="Select transportation" class="editable editable-click" data-original-title="" title=""><br><br></a></div>
 						</div>
 					</div>
 					<!--______ 2ND BLOCK ERRAND FORM END ______-->
@@ -424,19 +422,19 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right">Päevaraha</div>
-							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="1000 €" data-title="enter amount" style="color: gray; display: inline;">1000 €</a>
+							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="" data-title="enter amount" style="color: gray; display: inline;">Sisesta summa</a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right"></div>
 							<div class="col-xs-6 m-b-xs">
-								<a href="#" id="daily-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum adipisci, ad ipsam! Assumenda quod temporibus distinctio soluta quam id laboriosam voluptatum nostrum ducimus iusto officiis, unde sint accusantium eligendi nihil hic repellendus tenetur sequi labore, quidem sapiente adipisci, eum veritatis tempore! Eum similique in earum, labore provident quidem tempora maxime doloremque impedit officia nemo, magni, ducimus, possimus enim sint." data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum adipisci, ad ipsam! Assumenda quod temporibus distinctio soluta quam id laboriosam voluptatum nostrum ducimus iusto officiis, unde sint accusantium eligendi nihil hic repellendus tenetur sequi labore, quidem sapiente adipisci, eum veritatis tempore! Eum similique in earum, labore provident quidem tempora maxime doloremque impedit officia nemo, magni, ducimus, possimus enim sint.</a>
+								<a href="#" id="daily-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Lisa selgitus</a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right"></div>
 							<div class="col-xs-6 m-b">
-								<a href="#" id="daily-cost-advance" data-type="select" data-pk="1" data-value="Soovin avansi" data-title="enter amount">Soovin avansi</a>
+								<a href="#" id="daily-cost-advance" data-type="select" data-pk="1" data-value="" data-title="enter amount">Ei soovi avansi</a>
 							</div>
 						</div>
 						<div class="row">
