--- a/public/lahetus_uld.html
+++ b/public/lahetus_uld.html
@@ -389,27 +389,27 @@
 					<tbody>
 					<h3 class="m-t-lg m-b "><a class="btn btn-outline btn-primary" href="#"><i class="fa fa-plus"></i> Lisa endale uus lähetus</a></h3>
 						<tr>
-							<td>2015-06-15</td>
-							<td>2015-06-19</td>
+							<td>15-06-2015</td>
+							<td>19-06-2015</td>
 							<td>Holland, Leyden</td>
-							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+							<td><span class="badge badge-success">OK</span><a href="lahetus.html"> <i class="fa fa-folder-open-o"></i></a></td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
 						</tr>
 <tr>
-							<td>2015-08-06</td>
-							<td>2015-08-12</td>
+							<td>18-07-2015</td>
+							<td>21-07-2015</td>
 							<td>Portugal, Lissabon</td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
 						</tr><tr>
-							<td>2015-09-11</td>
-							<td>2015-09-27</td>
+							<td>22-09-2015</td>
+							<td>27-09-2015</td>
 							<td>Türgi, Istanbul</td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
 						</tr><tr>
-							<td>2016-02-02</td>
-							<td>2016-02-07</td>
+							<td>01-11-2015</td>
+							<td>04-11-2015</td>
 							<td>Itaalia, Rooma</td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
 							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
