--- a/public/login_ie.html
+++ b/public/login_ie.html
@@ -15,7 +15,7 @@
 	<link href="https://auth-test.ttu.ee/css/1.1/style.css" rel="stylesheet">
    <!--[if lt IE 9]>
 <script src="https://auth-test.ttu.ee/js/1.1/html5shiv.min.js"></script>
-<script src="https://auth-test.ttu.ee/js/1.1/respond.min.js"></script>
+<script src="https://auth-test.ttu.ee/js/1.1/respond.js"></script>
 <![endif]-->
     </head>
 
@@ -125,14 +125,14 @@ Probleemide korral sisselogimisel palun anda sellest viivitamatult teada IT kasu
 
 	<script src="https://auth-test.ttu.ee/js/1.1/jquery-1.11.3.min.js"></script>
 	<script src="https://static.ttu.ee/auth/js/1.1/bootstrap.min.js"></script>
-<!-- 	<script src="https://static.ttu.ee/auth/js/1.1/better-dom.js"></script>
-	 --><script src="https://static.ttu.ee/auth/js/1.1/better-placeholder-polyfill.js"></script>
+
 	<script src="https://static.ttu.ee/auth/js/1.1/toastr.min.js"></script>
 	<script src="https://auth-test.ttu.ee/js/1.1/login_scripts.js"></script>
-
+        <script src="https://auth-test.ttu.ee/js/1.1/jquery.placeholder.js"></script>
 
         <script type="text/javascript">
             (toastr).success('work in progress...');
+
         </script>
     </body>
 </html>
