--- a/public/profile_2.html
+++ b/public/profile_2.html
@@ -17,10 +17,7 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<!--_____ PAGE CSS _______-->
 		<link href="css/style.css" rel="stylesheet">
-		<!--[if lt IE 9]>
-<script src="https://auth-test.ttu.ee/js/1.1/html5shiv.min.js"></script>
-<script src="https://auth-test.ttu.ee/js/1.1/respond.js"></script>
-<![endif]-->
+
 	</head>
 
 	<body class="top-navigation">
@@ -94,11 +91,9 @@
 									</ul>
 
 								</li>
-								<!-- TÖÖKORRALDUS BEGIN
-								-------------------------------------------------------->
+								<!-- TÖÖKORRALDUS BEGIN -->
 								<li class="dropdown dropdown-large" id="too"></li>
-								<!-- TÖÖKORRALDUS END
-								-------------------------------------------------------->
+								<!-- TÖÖKORRALDUS END -->
 								<li class="dropdown dropdown-large">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teenused <b class="caret"></b></a>
 									<ul class="dropdown-menu dropdown-menu-large row">
@@ -187,8 +182,7 @@
 									</ul>
 								</li>
 							</ul>
-							<!--RIGHT NAVBAR
-							---------------------------------------------------------->
+
 							<ul class="nav navbar-top-links navbar-right">
 								<li class="dropdown m-l">
 									<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -243,16 +237,10 @@
 									</a>
 								</li>
 							</ul>
-							<!--RIGHT NAVBAR END
-							---------------------------------------------------------->
-							<!--NAVBAR SEARCH
-							---------------------------------------------------------->
 							<ul class="nav navbar-top-links navbar-right visible-md visible-lg">
 								<form>
 									<input type="text" class="form-control" placeholder="&#xF002; Otsi midagi..." name="srch-term" id="srch-term" style="font-family:Arial, FontAwesome"></form>
 							</ul>
-							<!--NAVBAR SEARCH END
-							---------------------------------------------------------->
 						</div>
 					</nav>
 				</div>
@@ -306,16 +294,15 @@
 						</div>
 						<div class="row"  id="sortable-view">
 							<!--LEFT COLUMN BEGIN
---------------------------------------------------------------->
+----------------------------------------------------->
 							<div class="col-lg-3 ui-sortable">
-
-								<!--PROFILE WIDGET BEGIN
-------------------------------------------------------------------->
-								<div id="my-profile-2" class="hidden-xs">
+								<!--IN HOUSE TRAINING WIDGET BEGIN
+--------------------------------------------------->
+							<div id="my-profile-1" class="hidden-xs">
 									<div class="widget-head-color-box navy-bg p-lg text-center">
-										<h3 class="m-b-lg">Teretulemast siseveeb!</h3>
+									<h3 class="m-b-lg">Teretulemast siseveeb!</h3>
 										<img src="img/a4.jpg" class="img-circle circle-border m-b-md" alt="profile">
-										<div class="m-b-md">
+											<div class="m-b-md">
 											<h2 class="font-bold no-margins">
 												Sander Marandi
 											</h2>
@@ -323,55 +310,6 @@
 										</div>
 									</div>
 								</div>
-								<!--PROFILE WIDGET END
------------------------------------------------------------------>
-								<!--PHONEBOOK WIDGET BEGIN
------------------------------------------------------------------->
-								<div class="ibox float-e-margins">
-									<div class="ibox-title">
-										<h5><i class="fa fa-phone"></i> Telefoniraamat</h5>
-										<div class="ibox-tools">
-											<a class="collapse-link">
-												<i class="fa fa-chevron-up"></i>
-											</a>
-											<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-												<i class="fa fa-wrench"></i>
-											</a>
-											<ul class="dropdown-menu dropdown-user">
-												<li><a href="#">Config option 1</a>
-												</li>
-												<li><a href="#">Config option 2</a>
-												</li>
-											</ul>
-											<a class="close-link">
-												<i class="fa fa-times"></i>
-											</a>
-										</div>
-									</div>
-									<div class="ibox-content">
-										<div class="favorites">
-											<form class="clearfix" role="form" action="#">
-												<div class="form-group">
-													<input type="text" placeholder="Nimi" class="form-control">
-												</div>
-												<div class="form-group">
-													<input type="text" placeholder="Amet" class="form-control">
-												</div>
-												<div class="form-group">
-													<input type="text" placeholder="Üksus" class="form-control">
-												</div>
-												<div class="form-group">
-													<input type="text" placeholder="Telefon" class="form-control">
-												</div>
-												<button class="btn btn-md btn-primary pull-right" type="submit"><strong>Otsi</strong></button>
-											</form>
-										</div>
-									</div>
-								</div>
-								<!--PHONEBOOK WIDGET END
------------------------------------------------------->
-								<!--IN HOUSE TRAINING WIDGET BEGIN
---------------------------------------------------->
 								<div class="ibox float-e-margins">
 									<div class="ibox-title">
 										<h5><i class="fa fa-mortar-board"></i> Sisekoolitused</h5>
@@ -438,6 +376,51 @@
 									</div>
 								</div>
 								<!--IN HOUSE TRAINING WIDGET END
+------------------------------------------------------>
+								<!--PHONEBOOK WIDGET BEGIN
+------------------------------------------------------>
+								<div class="ibox float-e-margins">
+									<div class="ibox-title">
+										<h5><i class="fa fa-phone"></i> Telefoniraamat</h5>
+										<div class="ibox-tools">
+											<a class="collapse-link">
+												<i class="fa fa-chevron-up"></i>
+											</a>
+											<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+												<i class="fa fa-wrench"></i>
+											</a>
+											<ul class="dropdown-menu dropdown-user">
+												<li><a href="#">Config option 1</a>
+												</li>
+												<li><a href="#">Config option 2</a>
+												</li>
+											</ul>
+											<a class="close-link">
+												<i class="fa fa-times"></i>
+											</a>
+										</div>
+									</div>
+									<div class="ibox-content">
+										<div class="favorites">
+											<form class="clearfix" role="form" action="#">
+												<div class="form-group">
+													<input type="text" placeholder="Nimi" class="form-control">
+												</div>
+												<div class="form-group">
+													<input type="text" placeholder="Amet" class="form-control">
+												</div>
+												<div class="form-group">
+													<input type="text" placeholder="Üksus" class="form-control">
+												</div>
+												<div class="form-group">
+													<input type="text" placeholder="Telefon" class="form-control">
+												</div>
+												<button class="btn btn-md btn-primary pull-right" type="submit"><strong>Otsi</strong></button>
+											</form>
+										</div>
+									</div>
+								</div>
+								<!--PHONEBOOK WIDGET END
 ------------------------------------------------------>
 							</div>
 							<!--LEFT COLUMN END
@@ -958,11 +941,11 @@
 		<script src="js/navbar_menu.js"></script>
 		<script src="js/dashboard.js"></script>
 
-		<!-- Fix for IE browser placeholder atribute -->
-		<script src="js/jquery.placeholder.js"></script>
 		<script>
 
 			$(document).ready(function () {
+				//DRAG'N'DROP
+				WinMove();
 
 			});
 
